# bicyclus

./: .gitignore  LICENSE  README.md  setup.cfg
.githooks/: pre-commit
bicyclus/: __init__.py
bicyclus/blackbox/: __init__.py  blackbox.py  likelihood.py
bicyclus/cyclus_db/: __init__.py  extract.py
bicyclus/examples/: run.py  simple.json  test_candu_extract.py
bicyclus/util/: __init__.py  log.py  parsers.py  postprocessing.py  util.py
bicyclus/visualize/: merge.py  plot_logs.py  walk2d.py
examples/: README.md  cyclus_input.json  run.py  sample_parameters.json  start_reconstruction.sh
examples/data/: cyclus_trace_BicyclusExample_BicyclusExample_29980243_000_0000.cdf  cyclus_trace_BicyclusExample_BicyclusExample_30335404_001_0000.cdf  cyclus_trace_BicyclusExample_BicyclusExample_30335404_002_0000.cdf  cyclus_trace_BicyclusExample_BicyclusExample_30335404_003_0000.cdf  cyclus_trace_BicyclusExample_BicyclusExample_30335404_004_0000.cdf  merged.cdf
examples/parameters/: true_parameters.json
