[metadata]
name = bicyclus
version = 0.0.1
description = Code for running Bayesian Inference on Cyclus nuclear fuel cycle simulations
long_description = file: README.md
author = Lewin Bormann, Max Schalz
author_email = max.schalz@rwth-aachen.de
maintainer = Max Schalz
url = https://github.com/Nuclear-Verification-and-Disarmament/bicyclus
license = BSD-3-Clause
classifiers =
    License :: OSI Approved :: BSD-3-Clause License
    Programming Language :: Python :: 3

[options]
packages = find:
# Has been tested with Python 3.8.2
python_requires = >=3.7
install_requires =
  cyclus
  matplotlib
  numpy
  pandas
  scipy
# Install also requires the following three packages.
# - arviz,
# - pymc3,
# - theano.
# However, you need to manually install cherry-picked versions (see README.md).
# setuptools would simply download the latest version from PyPI and I do not
# know how to change this behaviour.
