[metadata]
name = bicyclus
version = 0.0.1
description = Code for running Bayesian Inference on Cyclus nuclear fuel cycle simulations
long_description = file: README.md
author = Lewin Bormann, Max Schalz
author_email = max.schalz@rwth-aachen.de
maintainer = Max Schalz
url = https://github.com/Nuclear-Verification-and-Disarmament/bicyclus
license = BSD-3-Clause
classifiers =
    License :: OSI Approved :: BSD-3-Clause License
    Programming Language :: Python :: 3

[options]
packages = find:
# Has been tested with Python 3.8.2
python_requires = >=3.7
install_requires =
  arviz  # See note below.
  matplotlib
  numpy
  pandas
  pymc3  # See note below.
  scipy

# Please install the cherry-picked versions of Arviz and PyMC3 as described in
# README.md. Using setuptools for this does not work/may lead to unexpected
# behaviour, as setuptools would simply download the latest versions from PyPI.
