[metadata]
name = bicyclus
version = 0.2.0
description = Code for running Bayesian Inference on Cyclus nuclear fuel cycle simulations
long_description = file: README.md
author = Lewin Bormann, Max Schalz
author_email = schalz@nvd.rwth-aachen.de
maintainer = Max Schalz
url = https://github.com/Nuclear-Verification-and-Disarmament/bicyclus
license = BSD-3-Clause
classifiers =
    License :: OSI Approved :: BSD-3-Clause License
    Programming Language :: Python :: 3

[options]
packages = find:
# Has been tested with Python 3.10.6
python_requires = >=3.7
install_requires =
  arviz
  numpy <2
  pymc >=4.0
  scipy

[options.extras_require]
plotting =
  matplotlib
  pandas
  seaborn
